# BDT_dev

./: .gitignore  BDT_사용SOP_v2.0.docx  BatteryDataTool.py  BatteryDataTool_260306.py  BatteryDataTool_history.txt  CONTEXT.md  CYC_PARSER_INTEGRATION_GUIDE.md  DFN_interface_reaction.html  DataTool.py  DataTool_260306.py  README.md  _bench_workers.py  _fix_suptitle.py  _test_accel_pattern.py  _test_end_condition.py  _test_gen4p_crossval.py  _test_sch_priority.py  _test_sch_structure.py  _test_threshold_crossval.py  _toyo_templates.json  _사이클카테고리_분석.csv  _사이클카테고리_분석.txt  _신뢰성_종합현황.csv  _신뢰성_종합현황.json  _신뢰성_종합현황.txt  analyze_cyc.py  analyze_cyc_detail.py  analyze_cycle_category.py  analyze_db.py  analyze_reliability.py  analyze_savedata.py  battery-study.skill  build_exe_onefile.bat  build_exe_onepath.bat  build_ui.bat  code_graph_viz.html  commit-bdt.skill  compare_csv_cyc.py  create_status_tab_diagram.py  cyc_detailed_analysis.py  (+13 more)
BAK/: BatteryDataTool.py  BatteryDataTool_optRCD.py  BatteryDataTool_optRCD_oper1.py  BatteryDataTool_optRCD_oper2.py  BatteryDataTool_optRCD_oper3_ui.py  BatteryDataTool_optRCD_oper4_ylabel.py  BatteryDataTool_optRCD_oper5_legend.py  BatteryDataTool_optRCD_oper6_fileinout.py  BatteryDataTool_optRCD_oper7_plotUI.py  BatteryDataTool_optRCD_oper8_pop_plot.py  BatteryDataTool_optRCD_proto_1.py  BatteryDataTool_origin.py
BatteryDataTool_260205/: build_exe.bat
BatteryDataTool_260205_/: update.md
BatteryDataTool_260206/: BatteryDataTool.py  test_cycle_timing.py  timing_result.txt  update.md
BatteryDataTool_260206_/: update.md
BatteryDataTool_260206_edit/: BatteryDataTool.py
BatteryDataTool_260206_edit copy/: BatteryDataTool.py  BatteryDataTool_UI.py  BatteryDataTool_UI.ui  BatteryDataTool_optRCD.py  BatteryDataTool_optRCD_oper1.py  BatteryDataTool_optRCD_oper3_ui.py  BatteryDataTool_optRCD_oper8_pop_plot.py  BatteryDataTool_optRCD_proto_.py  diff.txt  diff_utf8.txt  update.md
BatteryDataTool_dev/: BatteryDataTool_optRCD_proto_.py
DataTool_dev/: DataTool.py  DataTool_UI.py  DataTool_UI.ui  DataTool_optRCD_proto_.py  tempCodeRunnerFile.py
DataTool_dev_code/: DataTool_UI.py  DataTool_UI_test.py  DataTool_optRCD_proto_.py  bdt_pybamm.py  bdt_regression.py  bdt_trace.py  tempCodeRunnerFile.py
analysis_dev_env/: README.md
docs/: 250613_search_white_bg_and_total_count.md  260310_foldable8_ut_application.md  260310_remove_battery_from_filenames.md  260310_toyo_cycle_data_pipeline_analysis.md  260312_link_cyc_preprocess_refactor.md  260312_origin_vs_optRCD_proto_matching.md  260318_fix_cycle_estimation_direct_path_input.md  260318_unify_6_cycle_functions.md  BDT_사용SOP_v1.0.docx  BDT_전기화학시뮬레이션_발표자료.pptx  SOP_dVdQ분석탭_PPT.md  SOP_사이클데이터탭_PPT.md  SOP_세트결과탭_PPT.md  SOP_패턴수정탭_PPT.md  SOP_현황탭_PPT.md  battery_tool_update.pptx  changelog_260212.md  color_palette_preview.html  electrochemical_simulation_milestone_260223.md  electrochemical_simulation_milestone_ppt_260223.md  electrochemical_simulation_milestone_quarterly_ppt.md  electrochemical_simulation_milestone_slides_260224.md  int.md  interbattery_2026_review.pptx  interbattery_2026_zwick.pptx  optimize_rate_chg_dchg_260210.md  parameter_generator_v9.4_analysis_260220.md  plan-allProfile_260210.md  plan_web_migration_260306.md  pne_search_cycle_cache_optimization_260211.md  pne_to_toyo_pattern_conversion.md  pyinstaller_warnings_260306.md  toyo_cycle_data_optimization.md
outputs/: 260319_DataTool_UI_Improvement.md  create_tab1_layout_diagram.py  cycle_analysis_result.xlsx
sop_images/: TAB1_README.md
tests/: conftest.py  test_cycle_data_loading.py  test_data_gitt.sch  test_logical_cycle.py  test_path_parsing.py  test_pne_restore.py  test_profile_accuracy.py  test_profile_analysis.py  test_sch_parser.py
tools/: debug_classification.py  drm_reload_test.py  ect_inspect.md  export_all_cycle_timelines.py  mode_flag_analysis.md  mode_flag_compare.md  mode_flag_narrow.md  mode_flag_special_steps.csv  phase0_2_field_distribution.csv  phase0_2_validation.md  profile_trace_viewer.ipynb  proto_v3_groups.csv  read_cyc.m  reclassify_prototype.py  save_end_schema.py  sch_csv_crosscheck.md  sch_csv_crosscheck.py  sch_csv_step_align.md  sch_csv_step_align.py  sch_dump.py  (+32 more)
tools/doc_converter/: .env.example  DOXA_README.md  README.md  VSCODE_USAGE.md  compare_outputs.py  convert.bat  convert.py  doxa_convert.bat  doxa_convert.py  doxa_smoke_test.py  prefetch_models.py  pyproject.toml  requirements.txt  setup.bat
(+815 files in other folders)
