[project]
name = "dataprocess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "glob2>=0.7",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pyinstaller>=6.18.0",
    "pyodbc==5.1.0",
    "pybamm>=24.11",
    "pyqt6>=6.10.2",
    "scipy>=1.17.0",
    "xlwings>=0.33.20",
    "xlsxwriter>=3.2.9",
    "polars>=1.39.0",
    "xlrd>=2.0.2",
    "pytest>=9.0.2",
    "pytest-qt>=4.5.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-benchmark>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gui: GUI 필요 테스트 (pytest-qt, Windows)",
    "slow: 대용량 데이터 또는 오래 걸리는 테스트",
    "perf: 성능 회귀 검증 (pytest-benchmark) — 사용자 raw 데이터 의존",
]
# Level A 기본 실행: GUI + perf 테스트 제외 (사용자 데이터 의존)
addopts = "-m 'not gui and not perf' -v"
