[project]
name = "doc-converter"
version = "0.1.0"
description = "Document → Markdown local OSS pipeline + DoXA adapter"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "docling>=2.8",
    "marker-pdf>=1.0",
    # markitdown: pdf/pptx/docx 만. [all] 은 OpenAI/Azure/YouTube 등 클라우드 extras 포함
    "markitdown[pdf,pptx,docx]>=0.0.2",
    # mineru: core 만. [api]/[vlm-remote] 등 원격 extras 제외
    "mineru[core]>=2.5",
    "easyocr>=1.7",
    "pymupdf>=1.24",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "tabulate>=0.9",
    "requests>=2.32",
    "urllib3>=2.0",
]

[project.optional-dependencies]
doxa = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "*.py",
    "*.bat",
    "*.md",
    "requirements.txt",
]
