[project]
name = "doc-converter"
version = "0.1.0"
description = "Document → Markdown local OSS pipeline + DoXA adapter"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    # 2026-04-22 테스트 환경에서 함께 설치 확인된 버전 대역
    "docling>=2.90,<3",
    "marker-pdf>=1.10,<2",
    # markitdown: pdf/pptx/docx 만. [all] 은 OpenAI/Azure/YouTube 등 클라우드 extras 포함
    "markitdown[pdf,pptx,docx]>=0.1,<1",
    # mineru: core 만. pypi 버전 3.x (model 버전 2.5-Pro 와 별개)
    "mineru[core]>=3.1,<4",
    "easyocr>=1.7",
    "pymupdf>=1.27",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "tabulate>=0.10",
    "requests>=2.32",
    "urllib3>=2.0",
]

[project.optional-dependencies]
doxa = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "*.py",
    "*.bat",
    "*.md",
    "requirements.txt",
]
